# opencvProject

./: .gitignore  CMakeLists.txt  Calibr_1920x1080.xml  Makefile  crc.cpp  crc.h  main.cpp  procedures.cpp  procedures.h  protocol.h  settings.h
